Fix horizontal scrolling issue and optimize layout
Fixed the issue with columns which was causing a horizontal scroll to appear on the page. Optimized column sizes and paddings for all screen sizes.

--- a/client/src/components/ViewContainer.css
+++ b/client/src/components/ViewContainer.css
@@ -1,9 +1,3 @@
 .ViewContainer {
     flex: 1 1 auto;
 }
-
-.ViewContainer-userSelect-container.column {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: 1rem;
-}
