--- a/client/src/components/pages/nextDays/NextDays.css
+++ b/client/src/components/pages/nextDays/NextDays.css
@@ -1,7 +1,3 @@
-.NextDays {
-    padding: 1rem;
-}
-
 .NextDays .tags {
     justify-content: center;
 }
