--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,3 +19,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App .columns,
+.App .columns:last-child {
+  margin: 0;
+}
